[gd_scene load_steps=11 format=2]

[ext_resource path="res://sprites/tilesMaps/Dungeon_Tileset.png" type="Texture" id=1]
[ext_resource path="res://MainPerson.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/tilesMaps/[Base]BaseChip_pipo.png" type="Texture" id=3]
[ext_resource path="res://TrollCave.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 9.96012

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="TileSet" id=6]
0/name = "Dungeon_Tileset.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 160, 288, 32, 32 )
0/tile_mode = 1
0/autotile/bitmask_mode = 0
0/autotile/bitmask_flags = [  ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Dungeon_Tileset.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 384, 480, 256 )
1/tile_mode = 2
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 32, 32 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 1, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "Dungeon_Tileset.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 256, 384, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "Dungeon_Tileset.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 160, 192, 192, 128 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "Dungeon_Tileset.png 4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 192, 256, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "Dungeon_Tileset.png 5"
5/texture = ExtResource( 1 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 160, 256, 32, 32 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 3 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "Dungeon_Tileset.png 6"
6/texture = ExtResource( 1 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 256, 160, 32, 32 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 4 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "Dungeon_Tileset.png 7"
7/texture = ExtResource( 1 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 32, 416, 32, 32 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "Dungeon_Tileset.png 8"
8/texture = ExtResource( 1 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 32, 448, 32, 32 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape = SubResource( 5 )
8/shape_one_way = false
8/shape_one_way_margin = 1.0
8/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
8/z_index = 0
9/name = "Dungeon_Tileset.png 9"
9/texture = ExtResource( 1 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 0, 0, 96, 128 )
9/tile_mode = 1
9/autotile/bitmask_mode = 0
9/autotile/bitmask_flags = [  ]
9/autotile/icon_coordinate = Vector2( 0, 0 )
9/autotile/tile_size = Vector2( 32, 32 )
9/autotile/spacing = 0
9/autotile/occluder_map = [  ]
9/autotile/navpoly_map = [  ]
9/autotile/priority_map = [  ]
9/autotile/z_index_map = [  ]
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "[Base]BaseChip_pipo.png 10"
10/texture = ExtResource( 3 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 96, 832, 32, 32 )
10/tile_mode = 2
10/autotile/icon_coordinate = Vector2( 0, 0 )
10/autotile/tile_size = Vector2( 32, 32 )
10/autotile/spacing = 0
10/autotile/occluder_map = [  ]
10/autotile/navpoly_map = [  ]
10/autotile/priority_map = [  ]
10/autotile/z_index_map = [  ]
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0
11/name = "[Base]BaseChip_pipo.png 11"
11/texture = ExtResource( 3 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 96, 800, 32, 32 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = 0
12/name = "[Base]BaseChip_pipo.png 12"
12/texture = ExtResource( 3 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 64, 832, 64, 32 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape_one_way = false
12/shape_one_way_margin = 0.0
12/shapes = [  ]
12/z_index = 0
13/name = "[Base]BaseChip_pipo.png 13"
13/texture = ExtResource( 3 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 0, 832, 256, 64 )
13/tile_mode = 2
13/autotile/icon_coordinate = Vector2( 0, 0 )
13/autotile/tile_size = Vector2( 32, 32 )
13/autotile/spacing = 0
13/autotile/occluder_map = [  ]
13/autotile/navpoly_map = [  ]
13/autotile/priority_map = [  ]
13/autotile/z_index_map = [  ]
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape_one_way = false
13/shape_one_way_margin = 0.0
13/shapes = [  ]
13/z_index = 0

[node name="TrollCave" type="Node2D"]
script = ExtResource( 5 )

[node name="MainPerson" parent="." instance=ExtResource( 2 )]
position = Vector2( 160.917, -7.29778 )

[node name="spaw" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 44.8178, -47.9395 )

[node name="brownHoleTroll" type="Sprite" parent="Area2D"]
position = Vector2( 1.12246, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
show_behind_parent = true
position = Vector2( 2.83482, 6.26425 )
shape = SubResource( 1 )

[node name="spaw_init" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="TileMapBase" type="TileMap" parent="."]
show_behind_parent = true
tile_set = SubResource( 6 )
cell_size = Vector2( 32, 32 )
show_collision = true
format = 1
tile_data = PoolIntArray( -196610, 13, 2, -196609, 13, 65536, -262144, 13, 65536, -262143, 13, 65536, -262142, 13, 65536, -262141, 13, 65536, -262140, 13, 65536, -262139, 13, 65536, -262138, 13, 65536, -262137, 13, 65536, -262136, 13, 65536, -262135, 13, 65536, -262134, 13, 3, -131074, 13, 0, -131073, 1, 65549, -196608, 1, 65549, -196607, 1, 65549, -196606, 1, 65549, -196605, 1, 65549, -196604, 1, 65549, -196603, 1, 65549, -196602, 1, 65549, -196601, 1, 11, -196600, 1, 11, -196599, 1, 11, -196598, 13, 0, -65538, 13, 0, -65537, 1, 65549, -131072, 1, 131082, -131071, 1, 12, -131070, 1610612737, 12, -131069, 1, 65549, -131068, 1, 65549, -131067, 1, 65549, -131066, 1, 65549, -131065, 1, 65549, -131064, 1, 12, -131063, 1, 11, -131062, 13, 0, -2, 13, 0, -1, 1, 65549, -65536, 1, 65549, -65535, 1, 65549, -65534, 1, 65549, -65533, 1, 65549, -65532, 1, 65549, -65531, 1, 65549, -65530, 1, 65549, -65529, 1, 65549, -65528, 1, 65549, -65527, 1, 65549, -65526, 13, 0, 65534, 13, 0, 65535, 1, 65549, 0, 1, 65549, 1, 1, 65549, 2, 1, 65549, 3, 1, 65549, 4, 1, 65549, 5, 1, 65549, 6, 1, 65549, 7, 1, 65549, 8, 1, 65549, 9, 1, 65549, 10, 13, 0, 131070, 13, 0, 131071, 1, 65549, 65536, 1, 65549, 65537, 1, 65549, 65538, 1, 65549, 65539, 1, 65549, 65540, 1, 65549, 65541, 1, 65549, 65542, 1, 65549, 65543, 1, 65549, 65544, 1, 10, 65545, 1, 65549, 65546, 13, 0, 196606, 13, 0, 196607, 1, 65549, 131072, 1, 65549, 131073, 1, 65549, 131074, 1, 65549, 131075, 1, 65549, 131076, 1, 65549, 131077, 1, 65549, 131078, 1, 65549, 131079, 1, 10, 131080, 1, 65549, 131081, 1, 65549, 131082, 13, 0, 262142, 13, 0, 262143, 1, 65549, 196608, 1, 65549, 196609, 1, 65549, 196610, 1, 65549, 196611, 1, 65549, 196612, 1, 65549, 196613, 1, 65549, 196614, 1, 65549, 196615, 1, 65549, 196616, 1, 65549, 196617, 1, 65549, 196618, 13, 0, 327678, 13, 0, 327679, 1, 65549, 262144, 1, 65549, 262145, 1, 65549, 262146, 1, 65549, 262147, 1, 65549, 262148, 1, 65549, 262149, 1, 65549, 262150, 1, 65549, 262151, 1, 65549, 262152, 1, 65549, 262153, 1, 65549, 262154, 13, 0, 393214, 13, 65538, 393215, 13, 65536, 327680, 13, 65536, 327681, 13, 65536, 327682, 13, 65536, 327683, 13, 65536, 327684, 13, 65536, 327685, 13, 65536, 327686, 13, 65536, 327687, 13, 65536, 327688, 13, 65536, 327689, 13, 65536, 327690, 13, 65539 )

[node name="TileMapAcessories" type="TileMap" parent="."]
tile_set = SubResource( 6 )
cell_size = Vector2( 32, 32 )
show_collision = true
format = 1
tile_data = PoolIntArray( -196602, 1, 196608, -131071, 1, 65539, -65536, 1, 196608, 131075, 1, 196608, 262149, 1, 196610, 262153, 1, 327680 )

[node name="TileMapAcessoriesPilar" type="TileMap" parent="."]
show_behind_parent = true
z_index = 5
tile_set = SubResource( 6 )
cell_size = Vector2( 32, 32 )
show_collision = true
format = 1
tile_data = PoolIntArray( -131064, 7, 0, -65528, 8, 0 )

[connection signal="timeout" from="spaw" to="." method="_on_spaw_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="spaw_init" to="." method="_on_spaw_init_timeout"]
